Overflow issue solved

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,8 @@
 :root{
     font-family: "Dancing+Script",sans-serif;
 }
+html, body {
+    overflow-x: hidden;
+    width: 100%;
+}
+  
